--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,10 +33,10 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run -v ${{ github.workspace }}:${{ github.workspace}} --name myservice -e INPUT_ARGS -e HOME -e GITHUB_JOB -e GITHUB_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_REPOSITORY_OWNER -e GITHUB_RUN_ID -e GITHUB_RUN_NUMBER -e GITHUB_RETENTION_DAYS -e GITHUB_RUN_ATTEMPT -e GITHUB_ACTOR -e GITHUB_WORKFLOW -e GITHUB_HEAD_REF -e GITHUB_BASE_REF -e GITHUB_EVENT_NAME -e GITHUB_SERVER_URL -e GITHUB_API_URL -e GITHUB_GRAPHQL_URL -e GITHUB_WORKSPACE -e GITHUB_ACTION -e GITHUB_EVENT_PATH -e GITHUB_ACTION_REPOSITORY -e GITHUB_ACTION_REF -e GITHUB_PATH -e GITHUB_ENV -e RUNNER_OS -e RUNNER_NAME -e RUNNER_TOOL_CACHE -e RUNNER_TEMP -e RUNNER_WORKSPACE -e ACTIONS_RUNTIME_URL -e ACTIONS_RUNTIME_TOKEN -e ACTIONS_CACHE_URL -e GITHUB_ACTIONS=true -e CI=true -e API_TEST="main.py" api-test
+        docker run -v ${{ github.workspace }}:${{ github.workspace}} --name myservice -e API_TEST="main.py" -e WORKDIR=${{ github.workspace }} api-test
         docker inspect myservice
 
-#     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+#     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="main.py" -e WORKDIR=${{ github.workspace }} api-test
 #        docker inspect myservice
 
     # - name: Copy Container file
@@ -52,9 +52,6 @@ jobs:
     #     docker inspect service 
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
-
-    - name: Checkout
-      run: cp //reports/ reports
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
