--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run -v ${{ github.workspace }}:${{ github.workspace}} --name myservice -e API_TEST="smoke" -e WORKDIR=${{ github.workspace }} api-test
+        docker run -v ${{ github.workspace }}:${{ github.workspace}} --name myservice -e WORKDIR=${{ github.workspace }} api-test
         docker inspect myservice
 
 #     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="main.py" -e WORKDIR=${{ github.workspace }} api-test
