--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,14 +33,14 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run -v ${{ github.workspace }}:${{ github.workspace}} --name myservice -e WORKDIR=${{ github.workspace }} api-test
+        docker run -v ${{ github.workspace }}:${{ github.workspace}} --name myservice -e API_TEST="smoke" -e WORKDIR=${{ github.workspace }} api-test
         docker inspect myservice
 
-#     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="main.py" -e WORKDIR=${{ github.workspace }} api-test
+#     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="test_main.py" -e WORKDIR=${{ github.workspace }} api-test
 #        docker inspect myservice
 
     # - name: Copy Container file
-    # docker run --workdir /home/docker/code --mount type=bind,source=$(pwd),destination=${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+    # docker run --workdir /home/docker/code --mount type=bind,source=$(pwd),destination=${{ github.workspace}} --name myservice -e API_TEST="test_main.py" api-test
 
     #   run: |         
     #     docker run --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} --name myservice api-test
@@ -51,7 +51,7 @@ jobs:
     #     docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/,target=${{ github.workspace}} --name service api-test
     #     docker inspect service 
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
-# docker run -e API_TEST="main.py" api-test
+# docker run -e API_TEST="test_main.py" api-test
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
