--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  
   workflow_dispatch:
 
     inputs:
@@ -26,13 +27,14 @@ jobs:
           repo_name="ADO_Artifact_Map"  
           event_type="trigger-workflow" 
           service=${{ github.event.inputs.target_service }}"
-  
           curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{secrets.PAT}}" \
-            https://api.github.com/repos/$repo_owner/$repo_name \
-            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"unit\": false, \"integration\": true}}"
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{secrets.PAT}}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/<OWNER>/<REPO>/dispatches \
+          -d '{"event_type":"dispatch-event"}'
+
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
