--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,16 +8,8 @@ on:
   
   workflow_dispatch:
 
-    inputs:
-      target_service:
-        description: 'python-api'
-        required: true
-    #   target_version:
-    #     description: 'Input a version (e.g., v1.0.0)'
-    #     required: true
-
 jobs:
-  trigger:
+  trigger-event:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Workflow in Another Repository
