--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{secrets.PAT}}" \
+          -H "Authorization: token ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/judyye615/ADO_Artifact_Map/dispatches \
           -d '{"event_type":"dispatch-event"}'
