--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,11 +20,12 @@ jobs:
           event_type="trigger-workflow" 
           service=${{ github.event.inputs.target_service }}"
           curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
+          -X POST \ "https://api.github.com/repos/judyye615/ADO_Artifact_Map/actions/workflows/maven.yml/dispatches" \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/judyye615/ADO_Artifact_Map/dispatches \
+
           -d '{"event_type":"dispatch-event"}'
 
 
