--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,11 +18,12 @@ jobs:
           repo_owner="judyye615" 
           repo_name="ADO_Artifact_Map"  
           curl -L \
-          -X POST \ https://api.github.com//repos/judyye615//ADO_Artifact_Map//dispatches \
+          -X POST \ 
           -H "Accept: application/vnd.github.v3+json" \
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com//repos/judyye615//ADO_Artifact_Map//dispatches \
           -d '{"event_type":"dispatch-event"}'
 
 
