--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,19 +11,22 @@ on:
 jobs:
   trigger-event:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        repo: ['judyye615/ADO_Artifact_Map']
+        
+
     steps:
       - name: Trigger Workflow in Another Repository
         run: |
           # Set the required variables
-          repo_owner="judyye615" 
-          repo_name="ADO_Artifact_Map"  
           curl -L \
           -X POST \ 
           -H "Accept: application/vnd.github.v3+json" \
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com//repos/judyye615//ADO_Artifact_Map//dispatches \
+          https://api.github.com/repos/${{ matrix.repo }}/dispatches \
           -d '{"event_type":"dispatch-event"}'
 
 
