--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         repo: ['judyye615/ADO_Artifact_Map']
-        
+
 
     steps:
       - name: Trigger Workflow in Another Repository
@@ -26,7 +26,7 @@ jobs:
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ matrix.repo }}/dispatches \
+          https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches \
           -d '{"event_type":"dispatch-event"}'
 
 
