--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ matrix.repo }}/blob/main/.github/workflows/maven.yml/dispatches \
+          https://api.github.com/repos/${{ matrix.repo }}/.github/workflows/maven.yml/dispatches \
           -d '{"event_type":"dispatch-event"}'
 
 
