--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        repo: ['judyye615/ADO_Artifact_Map']
+        repo: ['judyye615@github.com/judyye615/ADO_Artifact_Map']
 
 
     steps:
@@ -26,7 +26,7 @@ jobs:
           -H "Content-Type: application/json" \
           -H "Authorization: Bearer ${{ secrets.PAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/dispatches" \
+          "https://api.github.com/repos/${{ matrix.repo }}/dispatches" \
           -d '{"event_type":"dispatch-event"}'
 
 
