--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,13 +18,15 @@ jobs:
 
     steps:
       - name: Trigger Workflow in Another Repository
+        env: # Or as an environment variable
+          TOKEN: ${{ secrets.PAT }}
         run: |
           # Set the required variables
           curl -L \
           -X POST \ 
           -H "Accept: application/vnd.github.v3+json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: Bearer ${{ secrets.PAT }}" \
+          -H "Authorization: Bearer $TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/${{ matrix.repo }}/dispatches" \
           -d '{"event_type":"dispatch-event"}'
