--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
           -X POST \ 
           -H "Accept: application/vnd.github.v3+json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: Bearer $TOKEN" \
+          -H "Authorization: Bearer $env:TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/${{ matrix.repo }}/dispatches" \
           -d '{"event_type":"dispatch-event"}'
