--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,7 +11,11 @@ on:
 jobs:
   trigger-event:
     runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        repo: ['judyye615/ADO_Artifact_Map']
+
+
     steps:
       - name: Trigger Workflow in Another Repository
         env: # Or as an environment variable
@@ -26,9 +30,8 @@ jobs:
           -H "Content-Type: application/json" \
           -H "Authorization: Bearer $env:TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/$repo_owner/$repo_name/dispatches" \
-          -d '{"event_type":"dispatch-event"}'
-
+          "https://api.github.com/repos/${{ matrix.repo }}/dispatches" \
+          --data-raw '{"event_type":"dispatch-event"}'
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
