--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,8 +30,8 @@ jobs:
           -H "Content-Type: application/json" \
           -H "Authorization: Bearer $env:TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/${{ matrix.repo }}/dispatches" \
-          --data-raw '{"event_type":"dispatch-event"}'
+          "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/9664343015/dispatches" \
+          --data-raw '{\"event_type\":\"dispatch-event\"}'
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
