--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,10 +27,9 @@ jobs:
           curl -L \
           -X POST \ 
           -H "Accept: application/vnd.github.v3+json" \
-          -H "Content-Type: application/json" \
           -H "Authorization: Bearer $env:TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/9654180762/dispatches" \
+          "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/${{ github.run_id }}/dispatches" \
           --data-raw '{\"event_type\":\"dispatch-event\"}'
 
       - name: Set up Python 3.10
