--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,15 +21,12 @@ jobs:
         env: # Or as an environment variable
           TOKEN: ${{ secrets.PAT }}
         run: |
-          # Set the required variables
-          repo_owner="judyye615" 
-          repo_name="ADO_Artifact_Map" 
           curl -L \
           -X POST \ 
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: Bearer $env:TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/${{ github.run_id }}/dispatches" \
+          "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/9664566992/dispatches" \
           --data-raw '{\"event_type\":\"dispatch-event\"}'
 
       - name: Set up Python 3.10
