--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
         env: # Or as an environment variable
           TOKEN: ${{ secrets.PAT }}
         run: 
-          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches" -d '{\"event_type\":\"dispatch-event\"}'
+          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches" --data-raw '{\"event_type\":\"dispatch-event\"}'
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
