--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,18 +21,7 @@ jobs:
         env: # Or as an environment variable
           TOKEN: ${{ secrets.PAT }}
         run: 
-          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches" --data-raw '{\"event_type\":\"dispatch-event\",\"ref\":\"main\"}'
+          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; 
-    
-      - name: Test with pytest
-        run: |
-          pytest
+      - name: Checkout code
+        run: echo "Hello"
