--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,17 +11,11 @@ on:
 jobs:
   trigger-event:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        repo: ['judyye615/ADO_Artifact_Map']
-
 
     steps:
       - name: Trigger Workflow in Another Repository
-        env: # Or as an environment variable
-          TOKEN: ${{ secrets.PAT }}
         run: 
           curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
 
       - name: Checkout code
-        run: echo "Hello"
+        run: echo "Hello World"
