--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  
   workflow_dispatch:
 
 jobs:
@@ -15,7 +14,7 @@ jobs:
     steps:
       - name: Trigger Workflow in Another Repository
         run: 
-          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ matrix.repo }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
+          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
 
       - name: Checkout code
         run: echo "Hello World"
