--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+
 jobs:
   trigger-event:
     runs-on: ubuntu-latest
@@ -14,7 +15,7 @@ jobs:
     steps:
       - name: Trigger Workflow in Another Repository
         run: 
-          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
+          curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ vars.OWNER }}/${{ vars.REPO }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
 
       - name: Checkout code
         run: echo "Hello World"
