--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,4 +18,4 @@ jobs:
           curl -L -X POST -H "Accept:application/vnd.github+json" -H "Authorization:Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version:2022-11-28" "https://api.github.com/repos/${{ vars.OWNER }}/${{ vars.REPO }}/actions/workflows/maven.yml/dispatches" --data-raw "{\"ref\":\"main\"}"
 
       - name: Checkout code
-        run: echo "Hello World"
+        run: echo "Hello Target"
