--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+
+addopts = -vs --alluredir=./temps --clean-alluredir
 markers =
     smoke: mark a test as a smoke.
     performance: mark a test as performance.
